--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,22 @@ ul,ol{
 .google_auth_img{
     margin-top: 30px;
 }
+.error{
+    padding: 0 16px !important;
+    margin-top: 8px;
+}
+.input_grp{
+    position: relative;
+}
+.openeye{
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 25px;
+}
