--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -58,6 +59,16 @@ ul,ol{
     padding-left: 5px;
     text-transform: capitalize;
 }
+.reg_auth button{
+    font-size: 14px;
+    color: #EA6C00;
+    font-weight: 700;
+    padding-left: 5px;
+    text-transform: capitalize;
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+}
 .reg_img{
     width: 100%;
     height: 100vh;
@@ -101,3 +112,162 @@ ul,ol{
     width: 100%;
     margin-bottom: 20px;
 }
+
+
+/* =============== RootLayout Part CSS Start ================ */
+.sidebar_main{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+}
+.sidebar{
+    background: #5F35F5;
+    width: 70%;
+    height: 98vh;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    padding: 20px 15px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.auth_name h4{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 8px;
+}
+.pro_img_main{
+    display: flex;
+    justify-content: center;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    /* overflow: hidden; */
+}
+.pro_img_main .profile_img{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    line-height: 0;
+}
+.side_nav{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 50px;
+}
+.nav_icon{
+    font-size: 45px;
+    color: #fff;
+    cursor: pointer;
+}
+/* =============== RootLayout Part CSS End ================ */
+
+
+/* =============== Home Part CSS Start ================ */
+.box_main{
+    width: 100%;
+    height: 400px;
+    background: #fff;
+    -webkit-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.25);
+    box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.25);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    padding: 13px 20px;
+    overflow-y: scroll;
+}
+.box_title{
+    color: #000;
+    font-size: 20px;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+}
+.title_wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.homecmnbtn_wrapper{
+    display: flex;
+    column-gap: 5px;
+}
+.homecmnbtn{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    background: #5F35F5;
+    border: 0;
+    padding: 2px 8px;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    cursor: pointer;
+    text-transform: capitalize;
+}
+.grouplist{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 0 10px 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+.grouplist:last-child{
+    border: 0;
+}
+.group_details{
+    display: flex;
+    align-items: center;
+}
+.group_img_holder{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.group_img_holder img{
+    width: 100%;
+}
+.group_info{
+    padding-left: 10px;
+}
+.group_name{
+    color: #000;
+    font-size: 18px;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    text-transform: capitalize;
+}
+.group_subtitle{
+    color: rgba(77, 77, 77, 0.75);
+    font-size: 14px;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+}
+/* =============== Home Part CSS End ================ */
