--- a/src/index.css
+++ b/src/index.css
@@ -157,12 +157,37 @@ ul,ol{
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     /* overflow: hidden; */
+    position: relative;
 }
 .pro_img_main .profile_img{
     width: 100px;
     height: 100px;
     object-fit: cover;
     line-height: 0;
+}
+.profile_edit_btn{
+    width: 30px;
+    height: 30px;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 50%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+}
+.profile_edit_btn:hover{
+    background-color: #fff;
+}
+.profile_edit_btn svg{
+    color: #000;
 }
 .side_nav{
     margin-top: 30px;
@@ -175,6 +200,28 @@ ul,ol{
     font-size: 45px;
     color: #fff;
     cursor: pointer;
+}
+.pro_edit_preview{
+    width: 70px ;
+    height: 70px;
+    overflow: hidden;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.img-preview{
+    width: 100% !important;
+    height: 100% !important;
+    background-color: red;
+    object-fit: cover;
+}
+.img-preview img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
 }
 /* =============== RootLayout Part CSS End ================ */
 
