--- a/src/index.css
+++ b/src/index.css
@@ -146,6 +146,9 @@ ul,ol{
     font-family: 'Poppins', sans-serif;
     margin-top: 8px;
 }
+.pro_img_holder{
+    position: relative;
+}
 .pro_img_main{
     display: flex;
     justify-content: center;
@@ -156,8 +159,8 @@ ul,ol{
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
-    /* overflow: hidden; */
-    position: relative;
+    overflow: hidden;
+    
 }
 .pro_img_main .profile_img{
     width: 100px;
@@ -210,6 +213,12 @@ ul,ol{
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
+    margin: 0 auto;
+}
+.pro_edit_preview>img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .img-preview{
     width: 100% !important;
