--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ ul,ol{
     height: 100vh;
     line-height: 0;
     object-fit: cover;
+    display: block;
 }
 .google_auth_img{
     margin-top: 30px;
