--- a/src/index.css
+++ b/src/index.css
@@ -194,6 +194,14 @@ ul,ol{
 .profile_edit_btn svg{
     color: #000;
 }
+.cropper_btn{
+    padding: 10px 20px;
+    background-color: #5F35F5;
+    color: #fff;
+    border: 0;
+    margin-top: 5px;
+    cursor: pointer;
+}
 .side_nav{
     margin-top: 30px;
     display: flex;
