--- a/src/index.css
+++ b/src/index.css
@@ -455,9 +455,10 @@ ul,ol{
     -moz-border-radius: 8px;
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
-    padding: 3px 10px;
+    padding: 10px 15px;
     margin-top: 15px;
     text-align: justify;
+    font-size: 18px;
 }
 .receive_msg{
     margin-right: 40px;
@@ -471,9 +472,10 @@ ul,ol{
     -moz-border-radius: 8px;
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
-    padding: 3px 10px;
+    padding: 10px 15px;
     margin-top: 15px;
     text-align: justify;
+    font-size: 18px;
 }
 .chat_footer{
     display: flex;
@@ -486,4 +488,23 @@ ul,ol{
 }
 .chat_footer button{
     padding: 15px 30px;
+}
+.empty_box{
+    margin:10px 20px 0 0;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0px 0px 11px 0px rgb(0 0 0 / 25%);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    /* height: 500px; */
+    padding: 40px 80px;
+    
+}
+.empty_chat{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
