--- a/src/index.css
+++ b/src/index.css
@@ -446,6 +446,12 @@ ul,ol{
     text-align: right;
     margin-left: 40px;
 }
+.send_msg span{
+    display: block;
+    font-size: 12px;
+    color: #a39f9f;
+    margin-top: 3px;
+}
 .send_msg p{
     background-color: #5F35F5;
     color: #fff;
@@ -462,6 +468,12 @@ ul,ol{
 }
 .receive_msg{
     margin-right: 40px;
+}
+.receive_msg span{
+    display: block;
+    font-size: 12px;
+    color: #a39f9f;
+    margin-top: 3px;
 }
 .receive_msg p{
     color: #000;
