--- a/src/index.css
+++ b/src/index.css
@@ -436,7 +436,8 @@ ul,ol{
 .chat_body{
     width: 100%;
     height: 400px;
-    overflow-y: scroll;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 .chat_body::-webkit-scrollbar{
     width: 0;
