--- a/src/index.css
+++ b/src/index.css
@@ -276,7 +276,7 @@ ul,ol{
     -o-border-radius: 10px;
     margin-top: 10px;
     margin-bottom: 25px;
-    padding: 13px 20px;
+    padding: 13px 10px;
     overflow-y: scroll;
     overflow-x: scroll;
 }
@@ -332,8 +332,21 @@ ul,ol{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 0 10px 0;
+    padding: 15px 10px 10px 10px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+.grouplist:hover{
+    background-color: #f2efef;
 }
 .grouplist:last-child{
     border: 0;
@@ -495,12 +508,38 @@ ul,ol{
     column-gap: 25px;
     margin-top: 25px;
 }
+.chat_input_box{
+    width: 100%;
+    position: relative;
+}
 .chat_footer input{
     width: 100%;
     padding: 15px 30px;
+    font-size: 20px;
 }
 .chat_footer button{
     padding: 15px 30px;
+    /* display: none; */
+}
+.camera_icon{
+    position: absolute;
+    right: 10px;
+    font-size: 22px;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    cursor: pointer;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+}
+.camera_icon:hover{
+    color: #5F35F5;
 }
 .empty_box{
     margin:10px 20px 0 0;
@@ -520,4 +559,19 @@ ul,ol{
     align-items: center;
     justify-content: center;
     text-align: center;
+}
+.img_modal_btn{
+    display: flex;
+    column-gap: 10px;
+    justify-content: flex-end;
+    margin-top: 40px;
+}
+.img_modal_btn button{
+    padding: 7px 15px;
+    background-color: #5F35F5;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    border: 0;
+    cursor: pointer;
 }
